update some components

--- a/src/Data/project1.json
+++ b/src/Data/project1.json
@@ -8,5 +8,10 @@
     "img": "https://cdn.shopify.com/s/files/1/0636/5226/6115/files/1MC_jpg.jpg?v=1771225818",   
     "title": "One Minute Clinic",
     "desc": "Hardware"
-  }   
+  },
+  {
+    "img": "https://cdn.shopify.com/s/files/1/0636/5226/6115/files/WhatsApp_Image_2026-02-17_at_6.18.02_PM.jpg?v=1771332641",   
+    "title": "Marketplace",
+    "desc": "Software"
+  } 
 ]
