--- a/src/Data/project2.json
+++ b/src/Data/project2.json
@@ -2,7 +2,7 @@
 [
   {
     "img": "https://cdn.shopify.com/s/files/1/0636/5226/6115/files/HP_jpg.jpg?v=1771394513",   
-    "title": "Preventive Health Care Platform",
+    "title": "Preventive Health Care",
     "desc": "Software"
   },
   {
