--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "bootstrap-icons": "^1.11.3",
     "html-react-parser": "^5.1.12",
     "localforage": "^1.10.0",
+    "lucide-react": "^0.575.0",
     "match-sorter": "^6.3.4",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^6.26.1",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
